# agi-tui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  fan_data.rs  main.rs  sqlite.rs  ui.rs
