[package]
name = "agi-tui"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4"
clap = {version = "3.2.17", features = ["derive"] }
